--- a/src/scss/patterns/_type.scss
+++ b/src/scss/patterns/_type.scss
@@ -11,10 +11,16 @@
   *     ...
   *  </html>
   */
-.rt-theme {
-  @include font-rem(16px);
+html {
+  font-family: 'Lato', sans-serif;
 }
 
+h1,
+h2,
+h3 {
+  margin: 0 0 15px;
+  padding: 0;
+}
 p {
   margin: 0;
   padding: 0;
