--- a/src/scss/utils/variables/_var-gutter.scss
+++ b/src/scss/utils/variables/_var-gutter.scss
@@ -2,9 +2,8 @@
   //Variables gutter (margin - padding)
 //*------------------------------------*/
 
-$gutter-xxs  : 6px;
-$gutter-xs   : 14px; ///row form
-$gutter-block: 16px;
+$gutter-xxs  : 5px;
+$gutter-xs   : 15px;
 $gutter-s    : 20px;
 $gutter-m    : 40px;
 $gutter-ml   : 60px;
