--- a/src/snippets/layout/_footer.pug
+++ b/src/snippets/layout/_footer.pug
@@ -2,4 +2,19 @@
 	Componente: footer | ID: C3 | Type: Layout
 //-----------------------------------------------
 footer.rt-footer
-	p footer
+	nav.rt-footer__nav
+		ul
+			li
+				a(href="" title="click to go to terms") Terms and Conditions
+
+			li
+				a(href="" title="click to see privacy") Privacy Policy
+
+			li
+				a(href="" title="Click to contact us") Contact Us
+
+
+	.rt-footer__social
+		p Follow us
+		a(href="" title="Follow us on Facebook") Facebook
+		a(href="" title="Follow us on Twitter") Twitter
