--- a/src/snippets/template/_head.pug
+++ b/src/snippets/template/_head.pug
@@ -20,6 +20,9 @@ head
   //- Google fonts
   link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato')
 
+  //- Awesome fonts
+  link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+
   //- Style theme UI test
   link(rel='stylesheet', href="static/css/main.css")
 
