--- a/src/snippets/layout/_header.pug
+++ b/src/snippets/layout/_header.pug
@@ -3,8 +3,28 @@
 //-----------------------------------------------
 if menuHome === true
   header.rt-header
-    p header home
+    .rt-canvas
+      // Header Logo
+      a.rt-header__brand(href="/") Rule of Thumb.
+      // Header nav
+      nav.rt-header__nav
+        ul
+          li
+            a(href="past-trials.html") Past Trials
+            ul.rt-header__subnav
+             li
+              a(href="") Sublevel 1
+             li
+              a(href="") Sublevel 2
+             li
+              a(href="") Sublevel 3
+          li
+            a(href="how-it-works.html") How It Works
+          li
+            a(href="") Log In / Sign Up
+
 
 else if menuInternal === true
   header.rt-header
-    p header interno
+    .rt-canvas
+      p header interno
