--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,8 @@
 'components/header',
 'components/footer',
 'components/voteItem',
-'components/hero';
+'components/hero',
+'components/alerts',
+'components/callout';
 
 @import 'generic/print';
