--- a/src/scss/utils/variables/_var-color.scss
+++ b/src/scss/utils/variables/_var-color.scss
@@ -27,15 +27,23 @@ $secondary: #ffad1d;
  * @section On
  */
 
-$grey: #606060;
+$grey: #333;
 
 /**
- * $c-on-primary-dark
+ * $grey-dark
  * @color
  * @section On
  */
 
 $grey-dark: #808081;
+
+/**
+ * $grey-white
+ * @color
+ * @section On
+ */
+
+$grey-white: #ebebeb;
 
 /**
  * $c-black
