--- a/src/snippets/how-it-works.pug
+++ b/src/snippets/how-it-works.pug
@@ -14,8 +14,12 @@ block content
 
   // Section level 1: Intro
   section
-    .ay-canvas
-     p How it works
+    .rt-canvas
+      h2.rt-sectionTitle How it works
+      p.rt-sectionLead Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi facilisis efficitur sem, eget laoreet nulla facilisis at. Mauris posuere in purus in rhoncus. 
+
+
+  include component/callout
 
 
 
