--- a/src/snippets/layout/_footer.pug
+++ b/src/snippets/layout/_footer.pug
@@ -16,5 +16,5 @@ footer.rt-footer
 
 	.rt-footer__social
 		p Follow us
-		a(href="" title="Follow us on Facebook") Facebook
-		a(href="" title="Follow us on Twitter") Twitter
+		a.rt-icon.rt-icon-fb(href="" title="Follow us on Facebook") Facebook
+		a.rt-icon.rt-icon-tw(href="" title="Follow us on Twitter") Twitter
