--- a/src/snippets/past-trials.pug
+++ b/src/snippets/past-trials.pug
@@ -13,9 +13,12 @@ block variables
 block content
 
   // Section level 1: Intro
-  section
-    .ay-canvas
-     p Past trials
+  section.rt-vote
+    h2.rt-sectionTitle Past Trials
+    .rt-canvas
+      include component/pastItem
+
+  include component/callout
 
 
 
