--- a/src/snippets/template/_head.pug
+++ b/src/snippets/template/_head.pug
@@ -18,7 +18,7 @@ head
   meta(name='msapplication-config', content='static/favicon/browserconfig.xml')
 
   //- Google fonts
-  link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato')
+  link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900')
 
   //- Awesome fonts
   link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
