--- a/src/snippets/layout/_header.pug
+++ b/src/snippets/layout/_header.pug
@@ -5,7 +5,7 @@ if menuHome === true
   header.rt-header
     .rt-canvas
       // Header Logo
-      a.rt-header__brand(href="/") Rule of Thumb.
+      a.rt-header__brand(href="index.html") Rule of Thumb.
       input(class="rt-menu-btn" type="checkbox" id="menu-btn")
       label(class="rt-menu-icon" for="menu-btn")
         span.navicon 
@@ -34,7 +34,7 @@ else if menuInternal === true
   header.rt-header.rt-header-internal
     .rt-canvas
       // Header Logo
-      a.rt-header__brand(href="/") Rule of Thumb.
+      a.rt-header__brand(href="index.html") Rule of Thumb.
       input(class="rt-menu-btn" type="checkbox" id="menu-btn")
       label(class="rt-menu-icon" for="menu-btn")
         span.navicon 
@@ -42,7 +42,7 @@ else if menuInternal === true
       nav.rt-header__nav
         ul
           li
-            a(href="/") Home
+            a(href="index.html") Home
           li
             a(href="past-trials.html") Past Trials
             ul.rt-header__subnav
